objects/amazonconnect__AC_AgentPerformance__c.object
<CustomObject>
    <description>Data from the Amazon Connect Agent Performance Report</description>
    <fields>
        <fullName>amazonconnect__AC_Object_Name__c</fullName>
        <label>AC_Object_Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AC_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>AC_Record_Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__After_contact_work_time__c</fullName>
        <label>After contact work time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__After_contact_work_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__After_contact_work_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__After_contact_work_time__c/3600)), TEXT(FLOOR(amazonconnect__After_contact_work_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__After_contact_work_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__After_contact_work_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__After_contact_work_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__After_contact_work_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__After_contact_work_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__After_contact_work_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>After_contact_work_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_First_Name__c</fullName>
        <label>Agent First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_Last_Name__c</fullName>
        <label>Agent Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmazonConnect_Agent_Performance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_answer_rate__c</fullName>
        <label>Agent answer rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_idle_time__c</fullName>
        <label>Agent idle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_idle_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Agent_idle_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Agent_idle_time__c/3600)), TEXT(FLOOR(amazonconnect__Agent_idle_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Agent_idle_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Agent_idle_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Agent_idle_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Agent_idle_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_idle_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_idle_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent_idle_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_interaction_and_hold_time__c</fullName>
        <label>Agent interaction and hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_interaction_and_hold_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Agent_interaction_and_hold_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Agent_interaction_and_hold_time__c/3600)), TEXT(FLOOR(amazonconnect__Agent_interaction_and_hold_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent_interaction_and_hold_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_interaction_time__c</fullName>
        <label>Agent interaction time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_interaction_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Agent_interaction_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Agent_interaction_time__c/3600)), TEXT(FLOOR(amazonconnect__Agent_interaction_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Agent_interaction_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Agent_interaction_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Agent_interaction_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Agent_interaction_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_interaction_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_interaction_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent_interaction_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_on_contact_time__c</fullName>
        <label>Agent on contact time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_on_contact_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Agent_on_contact_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Agent_on_contact_time__c/3600)), TEXT(FLOOR(amazonconnect__Agent_on_contact_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Agent_on_contact_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Agent_on_contact_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Agent_on_contact_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Agent_on_contact_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_on_contact_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_on_contact_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent_on_contact_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_after_contact_work_time__c</fullName>
        <label>Average after contact work time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_after_contact_work_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_after_contact_work_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_after_contact_work_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_after_contact_work_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_after_contact_work_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_after_contact_work_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_after_contact_work_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_after_contact_work_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_after_contact_work_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_after_contact_work_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_after_contact_work_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_agent_interaction_time__c</fullName>
        <label>Average agent interaction time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_agent_interaction_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_agent_interaction_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_agent_interaction_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_agent_interaction_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_agent_interaction_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_agent_interaction_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_agent_interaction_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_agent_interaction_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_agent_interaction_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_agent_interaction_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_agent_interaction_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_customer_hold_time__c</fullName>
        <label>Average customer hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_customer_hold_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_customer_hold_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_customer_hold_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_customer_hold_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_customer_hold_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_customer_hold_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_customer_hold_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_customer_hold_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_customer_hold_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_customer_hold_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_customer_hold_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_handle_time__c</fullName>
        <label>Average handle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_handle_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_handle_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_handle_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_handle_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_handle_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_handle_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_handle_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_handle_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_handle_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_handle_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_handle_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_outbound_after_contact_work_time__c</fullName>
        <label>Average outbound after contact work time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_outbound_agent_interaction_time__c</fullName>
        <label>Average outbound agent interaction time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Avg_agent_interaction_and_cust_hold_time__c</fullName>
        <label>Avg agent interaction and cust hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Avg_agent_intn_and_cust_hld_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c/3600)), TEXT(FLOOR(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg_agent_intn_and_cust_hld_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Avg_outbound_after_contact_work_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_outbound_after_contact_work_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_outbound_after_contact_work_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_outbound_after_contact_work_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg_outbound_after_contact_work_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Avg_outbound_agent_interaction_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_outbound_agent_interaction_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_outbound_agent_interaction_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_outbound_agent_interaction_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg_outbound_agent_interaction_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_Consulted__c</fullName>
        <label>Contacts Consulted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_Missed__c</fullName>
        <label>Contacts Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_agent_hung_up_first__c</fullName>
        <label>Contacts agent hung up first</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_handled__c</fullName>
        <label>Contacts handled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_handled_incoming__c</fullName>
        <label>Contacts handled incoming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_handled_outbound__c</fullName>
        <label>Contacts handled outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_hold_agent_disconnect__c</fullName>
        <label>Contacts hold agent disconnect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_hold_customer_disconnect__c</fullName>
        <label>Contacts hold customer disconnect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_hold_disconnect__c</fullName>
        <label>Contacts hold disconnect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_put_on_hold__c</fullName>
        <label>Contacts put on hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_out__c</fullName>
        <label>Contacts transferred out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_out_external__c</fullName>
        <label>Contacts transferred out external</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_out_from_queue__c</fullName>
        <label>Contacts transferred out from queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_out_internal__c</fullName>
        <label>Contacts transferred out internal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Customer_hold_time__c</fullName>
        <label>Customer hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Customer_hold_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Customer_hold_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Customer_hold_time__c/3600)), TEXT(FLOOR(amazonconnect__Customer_hold_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Customer_hold_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Customer_hold_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Customer_hold_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Customer_hold_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Customer_hold_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Customer_hold_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer_hold_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__EndInterval__c</fullName>
        <label>End Interval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Error_status_time__c</fullName>
        <label>Error status time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Error_status_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Error_status_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Error_status_time__c/3600)), TEXT(FLOOR(amazonconnect__Error_status_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Error_status_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Error_status_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Error_status_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Error_status_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Error_status_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Error_status_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error_status_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__IsUser__c</fullName>
        <description>Used for reporting on agent performance for the current user as the agent The field will evaluate to TRUE (1) whenever the Running User and Lookup(User) field are the same and the report will filter to those records.</description>
        <formula>IF(amazonconnect__AC_Object_Name__c = $User.amazonconnect__Amazon_Connect_Username__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Nonproductive_time__c</fullName>
        <label>Nonproductive time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Not_Available_time__c</fullName>
        <label>Not Available time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Not_Available_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Not_Available_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Not_Available_time__c/3600)), TEXT(FLOOR(amazonconnect__Not_Available_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Not_Available_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Not_Available_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Not_Available_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Not_Available_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Not_Available_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Not_Available_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not_Available_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Occupancy__c</fullName>
        <label>Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Online_time__c</fullName>
        <label>Online time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Online_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Online_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Online_time__c/3600)), TEXT(FLOOR(amazonconnect__Online_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Online_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Online_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Online_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Online_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Online_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Online_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Report_Id__c</fullName>
        <label>Report Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__StartInterval__c</fullName>
        <label>Start Interval</label>
        <type>DateTime</type>
    </fields>
    <label>AC Agent Performance</label>
    <nameField>
        <label>AC Agent Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Agent Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>